...
                        app:cardCornerRadius="20dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView">

                        <EditText
                            android:id="@+id/editTextPassword"
                            android:textColor="@android:color/white"
                            android:layout_width="303dp"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="2dp"
                            android:layout_marginLeft="16dp"
                            android:layout_marginEnd="10dp"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.501"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardView2">

                        <Button
                            android:id="@+id/buttonLogin"
                            android:layout_width="79dp"
                            android:layout_height="40dp"
                            android:textColor="@color/colorPrimary"
                            android:background="@android:color/transparent"
                            android:text="@string/login"
                            tools:layout_editor_absoluteX="8dp"
...
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.508"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageView3">

                        <EditText
                            android:id="@+id/editTextEmail"
                            android:layout_width="303dp"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/white"
                            android:textColorHint="@color/colorPrimary"
                            android:layout_marginStart="0dp"
                            android:layout_marginLeft="8dp"
...
